Changed dependencies to be run properly on supporting mobile device

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,7 +43,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "de.janoodle.circlesApp"
+        applicationId "com.hipework.timy"
         minSdkVersion 21 // avoid max 64k method limit
         targetSdkVersion 29
 
