--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   cloud_firestore: ^0.12.9
   firebase_auth: ^0.14.0
   google_sign_in: ^4.0.1 # Firebase auth dependency
-  firebase_storage: ^3.0.5
+  firebase_storage: 3.0.5
   firebase_messaging: ^5.1.3
   firebase_crashlytics: ^0.1.0+2
 
@@ -35,7 +35,7 @@ dependencies:
   built_value: ^6.6.0
   built_collection: ^4.2.2
 
-  image_picker: ^0.6.0+15
+  image_picker: 0.6.0+15
   transparent_image: ^1.0.0
 
   # We fixed a bug in the plugin
@@ -53,7 +53,7 @@ dependencies:
   flutter_platform_widgets: ^0.20.2
 
   flutter_linkify: ^2.1.0
-  url_launcher: ^5.0.3
+  url_launcher: 5.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
